# ChangeLog for dev-java/javatoolkit
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/javatoolkit/ChangeLog,v 1.32 2008/06/21 14:20:33 ali_bush Exp $

*javatoolkit-0.3.0 (21 Jun 2008)

  21 Jun 2008; Alistair Bush <ali_bush@gentoo.org>
  +javatoolkit-0.3.0.ebuild:
  Version Bump.

  15 Mar 2007; Vlastimil Babka <caster@gentoo.org>
  -files/javatoolkit-0.1.9-make.patch, -javatoolkit-0.1.9-r1.ebuild:
  Remove unneeded version.

  15 Mar 2007; Joshua Nichols <nichoj@gentoo.org>
  javatoolkit-0.2.0-r1.ebuild:
  Stable on ia64 for bug #165069.

  14 Feb 2007; Vlastimil Babka <caster@gentoo.org>
  -javatoolkit-0.1.9.ebuild, -javatoolkit-0.2.0.ebuild:
  Cleanup.

  10 Feb 2007; nixnut <nixnut@gentoo.org> javatoolkit-0.2.0-r1.ebuild:
  Stable on ppc wrt bug 165069

  04 Feb 2007; Andrej Kacian <ticho@gentoo.org> javatoolkit-0.2.0-r1.ebuild:
  Stable on x86, bug #165069.

  04 Feb 2007; Markus Rothe <corsair@gentoo.org>
  javatoolkit-0.2.0-r1.ebuild:
  Stable on ppc64; bug #165069

  03 Feb 2007; Steve Dibb <beandog@gentoo.org> javatoolkit-0.2.0-r1.ebuild:
  amd64 stable, bug 165069

  01 Jan 2007; Vlastimil Babka <caster@gentoo.org>
  -files/0.2.0-use-sax.patch, +files/0.2.0-use-sax-fixed.patch,
  javatoolkit-0.2.0-r1.ebuild:
  Fix the use-sax patch wrt bug #159600 by Wilbur Pan <wilburpan@hotmail.com>.
  Thanks to Flameeyes for teaching me the cvs magic needed.

*javatoolkit-0.2.0-r1 (31 Dec 2006)

  31 Dec 2006; Petteri Räty <betelgeuse@gentoo.org>
  +files/0.2.0-use-sax.patch, +javatoolkit-0.2.0-r1.ebuild:
  Patch to xml-rewrite-2.py to switch from direct Expat usage to Sax. Gives
  proper support for for example entities and preserving doctypes.

  30 Dec 2006; Vlastimil Babka <caster@gentoo.org> javatoolkit-0.1.9.ebuild,
  javatoolkit-0.1.9-r1.ebuild, javatoolkit-0.2.0.ebuild:
  Fixed HOMEPAGE wrt bug #159440.

*javatoolkit-0.2.0 (27 Dec 2006)

  27 Dec 2006; Petteri Räty <betelgeuse@gentoo.org>