@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/javatoolkit
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/javatoolkit/ChangeLog,v 1.32 2008/06/21 14:20:33 ali_bush Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/javatoolkit/ChangeLog,v 1.33 2008/06/26 09:26:07 ali_bush Exp $
+
+*javatoolkit-0.3.0-r1 (26 Jun 2008)
+
+  26 Jun 2008; Alistair Bush <ali_bush@gentoo.org>
+  +javatoolkit-0.3.0-r1.ebuild:
+  RevBump to add missing RDEPEND
 
 *javatoolkit-0.3.0 (21 Jun 2008)
 
